# vidstr

./: .env.example  .gitignore  README.md  client.py  concat_vid.py  config.yaml  demo.py  get_frame.py  main.py  mp4_to_gif.py  pyproject.toml  test-simple.sh
.public-agdocs/conf/: agro.conf.yml
.public-agdocs/guides/: AGENTS.md  GUIDE.md  genai-help.md  moviepy.index.md
.public-agdocs/guides.1/: moviepy.docs.md  moviepy.index.md
.public-agdocs/guides.2/: moviepy.portv2.md
.public-agdocs/specs/: alias-cmds.md  bad-import.md  client-type.md  clip-vid.md  cmd-based-fns.md  compound-1.md  concat-fix-tests.md  concat-vid.md  config-model-names.md  config-settings.md  cont-func.md  count-frames.md  default-n.md  dl-bucket.md  finalize-vidcont.md  fix-imwrite.md  fix-tests.md  fix-vidcont.md  gen-start-vid.md  gen-with-last-frame.md  get-frame-n.md  get-frame.md  img-to-vid.md  loop-cmd.md  make-img.md  mp-output-gif-v2.md  mp-output-gif-v3.md  mp-output-gif.md  need-bucket.md  profile-config.md  refactor-contvid.md  scriptable-concatvid.md  scriptable-getframe.md  setup-vertex.md  stuck-gif.md  test-script.md  unique-fn-fix.md  unique-fn.md  v2-fix-vidcont.md  v3-fix-vidcont.md  (+4 more)
docs/: dev-log-v1.md  tutorial-v1.md
tests/: test_clip_video.py  test_concat_vid.py  test_config.py  test_mp4_to_gif.py
util/: clip_video.py  mp4_to_gif.py
