[project]
name = "vidstr"
version = "0.1.2"
description = "Query Veo via Gemini + Vertex for Loop-Videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "google-genai",
    "python-dotenv",
    "opencv-python",
    "pyyaml",
    "google-cloud-storage",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
